--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "cypress": "cypress open",
+    "test": "jest",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -22,11 +24,15 @@
     "@storybook/addon-links": "^6.4.20",
     "@storybook/react": "^6.4.20",
     "@storybook/testing-library": "^0.0.9",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^13.0.0",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "babel-loader": "^8.2.4",
+    "cypress": "^9.5.3",
     "eslint": "7",
     "eslint-config-next": "12.1.4",
+    "identity-obj-proxy": "^3.0.0",
     "typescript": "4.6.3"
   }
 }
