--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@testing-library/react": "^13.0.0",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
+    "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
     "cypress": "^9.5.3",
     "eslint": "7",
     "eslint-config-next": "12.1.4",
     "identity-obj-proxy": "^3.0.0",
-    "typescript": "4.6.3"
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.3"
   }
 }
