--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "12.1.4",
     "identity-obj-proxy": "^3.0.0",
     "postcss": "^8.4.12",
+    "storybook-addon-next": "^1.6.2",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3"
   }
