--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
