--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@testing-library/react": "^13.0.0",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
+    "@types/styled-components": "^5.1.24",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
     "cypress": "^9.5.3",
@@ -37,6 +38,7 @@
     "identity-obj-proxy": "^3.0.0",
     "postcss": "^8.4.12",
     "storybook-addon-next": "^1.6.2",
+    "styled-components": "^5.3.5",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3"
   }
