--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
@@ -25,6 +24,7 @@
     "@storybook/addon-links": "^6.4.20",
     "@storybook/react": "^6.4.20",
     "@storybook/testing-library": "^0.0.9",
+    "@styled-icons/material-outlined": "^10.34.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^13.0.0",
     "@types/node": "17.0.23",
