--- a/package.json
+++ b/package.json
@@ -29,14 +29,19 @@
     "@testing-library/react": "^13.0.0",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.24",
     "autoprefixer": "^10.4.4",
+    "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.4",
     "cypress": "^9.5.3",
     "eslint": "7",
     "eslint-config-next": "12.1.4",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "jest-styled-components": "^7.0.8",
     "postcss": "^8.4.12",
+    "react-test-renderer": "^18.0.0",
     "storybook-addon-next": "^1.6.2",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.0.23",
